--- a/build.xml
+++ b/build.xml
@@ -12,23 +12,26 @@
             value="${version-major}.${version-minor}${version-status}"/>
 
   <property name="dist.name"              value="${Name}-${version}"/>
-  <property name="dist.root"              location="dist"/>
-  <property name="dist.dir"               location="${dist.root}/${dist.name}"/>
+  <property name="zipfile"         value="${name}-${version}.zip"/>
 
-  <property name="src.dir"                location="src"/>
-  <property name="src.test.dir"           location="src-test"/>
+  <property name="dist.root"              value="dist"/>
+  <property name="dist.dir"               value="${dist.root}/${dist.name}"/>
 
-  <property name="src.lib.dir"            location="src-lib"/>
-  <property name="src.lib.test.dir"       location="src-lib-test"/>
+  <property name="src.dir"                value="src"/>
+  <property name="src.test.dir"           value="src-test"/>
 
-  <property name="src.dev.dir"            location="src-dev"/>
+  <property name="src.lib.dir"            value="src-lib"/>
+  <property name="src.lib.test.dir"       value="src-lib-test"/>
 
-  <property name="build.dir"              location="build"/>
-  <property name="lib.dir"                location="lib"/>
+  <property name="src.dev.dir"            value="src-dev"/>
+
+  <property name="build.dir"              value="build"/>
+  <property name="lib.dir"                value="lib"/>
+  <property name="test.dir"               value="testing"/>
         <!-- Build classes --> 
-  <property name="classes.dir"            location="${build.dir}/classes"/>
-  <!-- <property name="jar.dir"                location="${build.dir}/jar"/> -->
-  <property name="jar.dir"                location="${lib.dir}"/>
+  <property name="classes.dir"            value="${build.dir}/classes"/>
+  <!-- <property name="jar.dir"                value="${build.dir}/jar"/> -->
+  <property name="jar.dir"                value="${lib.dir}"/>
         
         <!-- Meaning-less -->
   <property name="main-class"             value="cmd.AVLRunTest"/>      
@@ -81,7 +84,8 @@
 
   <target name="jars" depends="compile" description="Build the JAR anew">
     <mkdir dir="${jar.dir}"/>
-    <jar destfile="${jar.dir}/${name}.jar" basedir="${classes.dir}">
+    <delete file="${jar.dir}/${jarfile}"/>
+    <jar destfile="${jar.dir}/${jarfile}" basedir="${classes.dir}">
       <manifest>
         <attribute name="Main-Class" value="${main-class}"/>
       </manifest>
@@ -152,7 +156,7 @@
 
   <target name="run" depends="compile">
     <java classname="${main-class}" fork="true">
-      <!-- jar="${jar.dir}/${ant.project.name}.jar"-->
+      <!-- jar="${jar.dir}/${jarfile}"-->
       <arg value="--check"/>
       <arg value="10"/>
       <arg value="100"/>
@@ -178,6 +182,8 @@
     <delete dir="${dist.dir}"/>
     <mkdir dir="${dist.dir}"/>
 
+    <mkdir dir="${dist.dir}/${lib.dir}"/>
+
     <copy todir="${dist.dir}/${lib.dir}">
       <fileset dir="${lib.dir}" includes="**/*.jar" excludes="${jarfile}"/>
       <fileset dir="${jar.dir}" includes="*.jar"/>
@@ -201,7 +207,10 @@
     <copy todir="${dist.dir}/" file="ChangeLog.txt"/>
 
     <copy todir="${dist.dir}/${src.dir}">
-      <fileset dir="${src.build.dir}" includes="**" excludes="dev/**"/>
+      <fileset dir="${src.dir}" includes="**"/>
+      <fileset dir="${src.lib.dir}" includes="**"/>
+      <fileset dir="${src.test.dir}" includes="**"/>
+      <fileset dir="${src.lib.test.dir}" includes="**"/>
     </copy>
 
     <!-- Documentation is on the wiuki, mainly.
