git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119005 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -63,6 +63,10 @@
     <property name="java.debuglevel"  value="source,lines,vars"/>
     <property name="java.deprecation" value="true"/>
     <property name="java.optimize"    value="true"/>
+    <!--
+    <property name="java.source"      value="1.6"/>
+    <property name="java.target"      value="1.6"/>
+    -->
   </target>
 
   <!-- ========================================== -->
