--- a/build.xml
+++ b/build.xml
@@ -5,8 +5,8 @@
   
   <!-- The major and minor version numbers  -->
   <property name="version-major"   value="1"/>
-  <property name="version-minor"   value="0"/>
-  <property name="version-status"  value=""/>
+  <property name="version-minor"   value="1"/>
+  <property name="version-status"  value="-RC-0"/>
   <property name="version"
 	    value="${version-major}.${version-minor}${version-status}"/>
 
