git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/SDB/trunk@1119230 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -166,7 +166,7 @@
   </target>
 	
   <target name="test-derby" depends="jar">
-    <junit printsummary="on">
+    <junit printsummary="on"  fork="on">	<!-- Fork necessary for Derby -->
       <formatter type="plain"/>
       <classpath>
         <fileset dir="${lib.dir}" includes="*.jar"/>
