git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119267 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -71,7 +71,7 @@
   <!-- ==== Ivy Dependency   -->
 	
   <target name="ivy" description="Resolve dependences with Ivy">
-      <ivy:resolve haltonfailure="false" />
+      <ivy:resolve haltonfailure="false" /> <!-- Woodstox prolems -->
       <ivy:retrieve pattern="lib2/[artifact].[ext]" />
   </target>	
 	
