--- a/ivy.xml
+++ b/ivy.xml
@@ -1,5 +1,13 @@
-<ivy-module version="2.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<ivy-module version="2.0"
+	    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	    xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
     <info organisation="com.hp.hpl.jena" module="tdb"/>
+
+    <publications>
+	<artifact name="tdb" type="jar"/>
+    </publications>
+
     <dependencies>
 	<!-- ?? latest.integration -->
 	<dependency org="com.hp.hpl.jena" name="arq" rev="latest.integration"/>
@@ -30,5 +38,5 @@
 	<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.4.3"/>
 
     </dependencies>
-
+	
 </ivy-module>
