git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119269 13f79535-47bb-0310-9956-ffa450edef68

--- a/ivy.xml
+++ b/ivy.xml
@@ -10,8 +10,8 @@
 
     <dependencies>
 	<!-- ?? latest.integration -->
-	<dependency org="com.hp.hpl.jena" name="arq" rev="latest.integration"/>
-	<dependency org="com.hp.hpl.jena" name="arq-extra" rev="latest.integration"/>
+	<dependency org="com.hp.hpl.jena" name="arq" rev="2.3"/>
+	<dependency org="com.hp.hpl.jena" name="arq-extra" rev="2.3"/>
 
 	<!-- Pulls jena and it's dependennces -->
 	<!--
