--- a/build.xml
+++ b/build.xml
@@ -72,17 +72,21 @@
     </target>
 
     <!-- ========================================== -->
-    <!-- ==== Ivy Dependency   -->
+    <!-- ==== Ivy : Dependency Management  -->
     
-    <target name="ivy" description="Resolve dependences with Ivy">
+    <target name="ivy-init">
 	<ivy:settings />
-	<!-- Woodstox problems (remove from jena 2.5.6) -->
+    </target>
+
+    <target name="ivy" depends="ivy-init" description="Resolve dependences with Ivy">
+	<!-- haltonfailure="false" : Woodstox problems (remove from jena 2.5.6) -->
 	<ivy:resolve haltonfailure="false" /> 
 	<!-- Place here -->
-	<ivy:retrieve pattern="lib2/[artifact].[ext]" />
+	<ivy:retrieve pattern="lib2/[artifact]-[revision].[ext]" />
     </target>	
     
-    <target name="ivy-publish" depends="" description="Publish (with Ivy)">
+    <!-- Untested -->
+    <target name="ivy-publish" depends="ivy-init" description="Publish (with Ivy)">
 	<ivy:publish resolver="publish-resolver" pubrevision="${version}">
 	    <artifacts pattern="${build.lib.dir}/[artifact].[ext]" />
 	</ivy:publish>
