git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119270 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -80,9 +80,9 @@
 
     <target name="ivy" depends="ivy-init" description="Resolve dependences with Ivy">
 	<!-- haltonfailure="false" : Woodstox problems (remove from jena 2.5.6) -->
-	<ivy:resolve haltonfailure="false" /> 
+	<ivy:resolve conf="dev" /> 
 	<!-- Place here -->
-	<ivy:retrieve pattern="lib2/[artifact]-[revision].[ext]" />
+	<ivy:retrieve conf="dev" pattern="lib2/[artifact]-[revision].[ext]" />
     </target>	
     
     <!-- Untested -->
