--- a/ivy.xml
+++ b/ivy.xml
@@ -4,38 +4,28 @@
 	    xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
     <info organisation="com.hp.hpl.jena" module="tdb"/>
 
+    <configurations defaultconfmapping="main->*">
+	<conf name="main" description="TDB" />
+	<conf name="dev"  description="TDB development"  extends="main" />
+    </configurations>
+
     <publications>
-	<artifact name="tdb" type="jar"/>
+	<artifact conf="main" name="tdb" type="jar"/>
     </publications>
 
     <dependencies>
 	<!-- ?? latest.integration -->
+
 	<dependency org="com.hp.hpl.jena" name="arq" rev="2.3"/>
 	<dependency org="com.hp.hpl.jena" name="arq-extra" rev="2.3"/>
 
-	<!-- Pulls jena and it's dependennces -->
-	<!--
-	    <dependency org="com.hp.hpl.jena" name="iri" rev="0.5"/>
-	    <dependency org="com.hp.hpl.jena" name="jena" rev="2.5.6"/>
-	    <dependency org="com.hp.hpl.jena" name="jenatest" rev="2.5.6"/>
-	    <dependency org="com.hp.hpl.jena" name="json-jena" rev="1.0"/>
-	    <dependency org="com.hp.hpl.jena" name="concurrent-jena" rev="1.3.2"/>
-	    <dependency org="stax" name="stax-api" rev="1.0"/>
-	    <dependency org="org.apache.lucene" name="lucene-core" rev="2.3.1"/>
-	    <dependency org="antlr" name="antlr" rev="2.7.5"/>
-	    <dependency org="commons-logging" name="commons-logging" rev="1.1.1"/>
-	    <dependency org="com.ibm.icu" name="icu4j" rev="3.4.4"/>
-	    <dependency org="log4j" name="log4j" rev="1.2.15"/>
-	    <dependency org="xerces" name="xercesImpl" rev="2.7.1"/>
-	    <dependency org="xerces" name="xmlParserAPIs" rev="2.0.2"/>
-	-->
-
-	<!-- Correction (Jena 2.5.5 , ARQ 2.2) -->
-	<dependency org="woodstox" name="wstx-asl" rev="3.0.0"/>
-
+	<!-- Necessary for code compilation : configuration main should compile -->
 	<dependency org="junit" name="junit" rev="4.4"/>
 	<dependency org="org.slf4j" name="slf4j-api" rev="1.4.3"/>
-	<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.4.3"/>
+
+	<!-- Additional for development -->
+	<dependency conf="dev->*"   org="org.slf4j" name="slf4j-log4j12" rev="1.4.3"/>
+	<dependency conf="dev->*"   org="log4j" name="log4j" rev="1.2.15"/>
 
     </dependencies>
 	
