--- a/build.xml
+++ b/build.xml
@@ -81,7 +81,7 @@
     <target name="ivy" depends="ivy-init" description="Resolve dependences with Ivy">
 	<!-- haltonfailure="false" : Woodstox problems (remove from jena 2.5.6) -->
 	<ivy:resolve conf="dev" /> 
-	<!-- Place here -->
+	<!-- Without versions would be portable for Eclipse -->
 	<ivy:retrieve conf="dev" pattern="lib2/[artifact]-[revision].[ext]" />
     </target>	
     
