--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
     <!-- The major and minor version numbers  -->
     <property name="version-major"   value="1"/>
     <property name="version-minor"   value="1"/>
-    <property name="version-status"  value="-RC-0"/>
+    <property name="version-status"  value=""/>
     <property name="version"
               value="${version-major}.${version-minor}${version-status}"/>
 
